<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F5F5"
    tools:context=".activities.TftPlayerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/secondary"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/ic_arrow_back"
                tools:ignore="ImageContrastCheck"
                android:importantForAccessibility="no" />


            <TextView
                android:id="@+id/title"
                android:layout_width="212dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/rankwatch"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/text"
                android:textStyle="bold" />
            <Button
                android:id="@+id/updateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:background="@drawable/button_background"
                android:textColor="@color/text"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck"
                />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />

    <FrameLayout
        android:id="@+id/fragment_ranked_tft"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/primary"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/buttonAddToFavorites"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_to_favorites"
            android:background="@drawable/button_background"
            android:textColor="@color/text"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <View
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/buttonDeleteFromFavorites"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/delete"
            android:textColor="@color/text"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />
    </LinearLayout>

</LinearLayout>
